--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,9 @@
 @tailwind utilities;
 
-.hero-bg{
-    background-image: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .1)), url('hero.png');
+.hero-bg {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.3)), 
+                url('hero.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
